Rewrite analyzer README as principal-engineer-grade architecture doc
Replaces the minimal placeholder README with a comprehensive strategy document
covering all five layers: rule-based scanner, MCP tool server, custom
instructions, prompt files, and AI gap-filling. Includes architecture diagram,
layer-by-layer explanation, end-to-end workflow, smoke test results, and rule
authoring guide.

Agent-Logs-Url: https://github.com/scriptautomation123/env/sessions/5a24a859-5dca-474e-9c79-5a993dc15cbe

Co-authored-by: scriptautomation123 <211107195+scriptautomation123@users.noreply.github.com>